--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.2",
+    "react-background-video-player": "^1.1.8",
+    "react-cookie-consent": "^7.4.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
